@@ -49,6 +49,7 @@ tractags-0.7 (not yet released)
  * #11152: Tags are not supported on the 'wiki' realm
  * #11226: Replacing a tag removes unrelated tags
  * #11302: AttributeError: 'unicode' object has no attribute 'id'
+ * #11658: TypeError: get_tagged_resources() takes exactly 3 args (2 given)
  * TagsQuery now supports a context object
  * refactor cloud rendering so it can be used by other plugins
  * fix regression related to missing IWikiChangeListener
